encoded and decoded text input so input keeps its indentations and line breaks

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -8,3 +8,8 @@ h1{
 .not{
     text-decoration: underline;
 }
+
+/* has to be on code snippets to keep line breaks and indentions */
+.wrapCode {
+    white-space: pre-wrap;
+}
