--- a/views/todos.ejs
+++ b/views/todos.ejs
@@ -12,7 +12,7 @@
     <ul>
     <% todos.forEach( el => { %>
             <li class='todoItem' data-id='<%=el._id%>'>
-                <span class='<%= el.completed === true ? 'completed' : 'not'%>'><%= el.todo %></span>
+                <span class='<%= el.completed === true ? 'completed' : 'not'%> wrapCode', ><%= decodeURIComponent(el.todo) %></span> 
                 <span class='del'> Delete </span>
             </li>
     <% }) %>    
@@ -20,8 +20,9 @@
 
     <h2><%= user.userName %> has <%= left %> things left to do.</h2>
 
-    <form action="/todos/createTodo" method='POST'>
-        <input type="text" placeholder="Enter Todo Item" name='todoItem'>
+    <form action="/todos/createTodo" method='POST' id="snippetForm">
+        <!-- <input type="text" placeholder="Enter Todo Item" name='todoItem'> -->
+        <textarea name="todoItem">Enter Code Snippet...</textarea>
         <input type="submit">
     </form>
 
