--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>CodePin - SignUp</title>
+    <link rel="stylesheet" href="./css/loginStyle.css">
 </head>
 <body>
     <% if (locals.messages.errors) { %>
@@ -12,12 +13,15 @@
             <div class="alert alert-danger"><%= el.msg %></div>
         <% }) %>    
     <% } %>
-    <form action="/signup" method="POST">
-        <input type="text" name="userName" placeholder="User Name">
-        <input type="email" name="email" placeholder="Email">
-        <input type="password" name="password" placeholder="Password">
-        <input type="password" name="confirmPassword" placeholder="Confirm Password">
-        <input type="submit">
-    </form>
+    <div class="login">
+        <form action="/signup" method="POST">
+            <p><input type="text" name="userName" placeholder="User Name"></p>
+            <p><input type="text" name="email" placeholder="Email"></p>
+            <p><input type="password" name="password" placeholder="Password"></p>
+            <p><input type="password" name="confirmPassword" placeholder="Confirm Password"></p>
+            <br>
+            <input type="submit" name="commit" value="Create User">
+        </form>
+    </div>
 </body>
 </html>
