--- a/views/pins.ejs
+++ b/views/pins.ejs
@@ -6,20 +6,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/pins.style.css">
 </head>
 <body>
     <h1>CodePins</h1>
-    <ul>
+    <div id="snippetsContainer">
     <% snippets.forEach( el => { %>
-            <li class='todoItem' data-id='<%=el._id%>'>
-                <span class='wrapCode'><%= decodeURIComponent(el.snippet) %></span> 
-                <span><%= el.title %></span> 
-                <span><%= el.language %></span>
-                <span><%= el.description %></span>  
+            <div class='todoItem' data-id='<%=el._id%>'>
+                <h3><%= el.title %></h3>
+                <div class='wrapCode code'><%= decodeURIComponent(el.snippet) %></div> 
+                <h4><%= el.language %></h4>
+                <p><%= el.description %></p>  
                 <span class='del'> Delete </span>
-            </li>
+            </div>
     <% }) %>    
-    </ul>
+        </div>
 
     <form action="/pins/createSnippet" method='POST' id="snippetForm">
         <!-- <input type="text" placeholder="Enter Todo Item" name='todoItem'> -->
