check-in, index.js

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,11 +4,23 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="css/index.css">
+    <title>CodePin</title>
 </head>
 <body>
-    <h1>Create Your VERY OWN CodePin list!</h1>
-    <a href="/login"> Login</a>
-    <a href="/signup"> Signup</a>
+    <header>
+        <img src="" alt="CodePin Logo">
+        <ul>
+            <li class="button" id="logInButton"><a href="/login"> Login</a></li>
+            <li class="button" id="signUpButton"><a href="/signup"> Signup</a></li>
+        </ul>
+    </header>
+    <main>
+        <h1>
+            <span class="blueText">Code it.</span>
+            <span class="greyText">See it.</span>
+            <span class="redText">Pin it.</span>
+        </h1>
+    </main>
 </body>
 </html>
