added dashboard route

--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -11,7 +11,7 @@
 
 <body>
     <h1>CodePins</h1>
-    <a href="/pins/dashboard">Go to public dashboard</a>
+    <a href="/">Go to my pins</a>
     <ul>
         <% snippets.forEach( el=> { %>
             <li class='todoItem' data-id='<%=el._id%>'>
