added logo img and updated index.ejs with logo

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <img src="" alt="CodePin Logo">
+        <img src="images/codepin-logo.jpg" alt="CodePin Logo">
         <ul>
             <li class="button" id="logInButton"><a href="/login"> Login</a></li>
             <li class="button" id="signUpButton"><a href="/signup"> Signup</a></li>
