--- a/public/css/pins.style.css
+++ b/public/css/pins.style.css
@@ -5,11 +5,12 @@ body {
 }
 
 h1 {
-    color: var(--orange-color);
+    color: orangered;
 }
 
 #snippetsContainer {
     display: flex;
+    flex-wrap: wrap;
     gap: 20px;
 }
 
@@ -24,7 +25,7 @@ h1 {
 }
 
 .todoItem h3 {
-    color: var(--orange-color);
+    color: orangered;
     text-transform: uppercase;
 }
 
@@ -38,11 +39,12 @@ h1 {
 }
 
 .todoItem h4, .todoItem span {
-    color: var(--orange-color);
+    color: orangered;
 }
 
 .todoItem p {
     margin-top: 0;
+    color: rgb(121, 121, 255);
 }
 
 form {
@@ -71,28 +73,55 @@ form select {
 }
 
 .del {
-    background-color: rgb(151, 27, 27);
-    border: none;
-    color: white;
-    border-radius: 10px;
-    text-align: center;
-    padding: .5rem;
-    width: 50%;
-    margin-top: 20px;
+    padding: 0 18px;
+    height: 29px;
+    font-size: 12px;
+    font-weight: bold;
+    color: red;
+    text-shadow: 0 1px #e3f1f1;
+    background: #cde5ef;
+    border: 1px solid;
+    border-color: #b4ccce #b3c0c8 #9eb9c2;
+    border-radius: 16px;
+    outline: 0;
+    -webkit-box-sizing: content-box;
+    -moz-box-sizing: content-box;
+    box-sizing: content-box;
+    background-image: -webkit-linear-gradient(top, #edf5f8, #cde5ef);
+    background-image: -moz-linear-gradient(top, #edf5f8, #cde5ef);
+    background-image: -o-linear-gradient(top, #edf5f8, #cde5ef);
+    background-image: linear-gradient(to bottom, #edf5f8, #cde5ef);
+    -webkit-box-shadow: inset 0 1px white, 0 1px 2px rgba(0, 0, 0, 0.15);
+    box-shadow: inset 0 1px white, 0 1px 2px rgba(0, 0, 0, 0.15);
 }
 
 .del:hover {
-    background-color: rgb(176, 30, 30);
+    color: rgb(176, 30, 30);
 }
 
 #submitButton {
-    background-color: rgb(19, 159, 19);
-    color: white;
-    border-radius: 10px;
-    border: none;
-    padding: .5rem
+    padding: 0 18px;
+    height: 29px;
+    font-size: 12px;
+    font-weight: bold;
+    color: #527881;
+    text-shadow: 0 1px #e3f1f1;
+    background: #cde5ef;
+    border: 1px solid;
+    border-color: #b4ccce #b3c0c8 #9eb9c2;
+    border-radius: 16px;
+    outline: 0;
+    -webkit-box-sizing: content-box;
+    -moz-box-sizing: content-box;
+    box-sizing: content-box;
+    background-image: -webkit-linear-gradient(top, #edf5f8, #cde5ef);
+    background-image: -moz-linear-gradient(top, #edf5f8, #cde5ef);
+    background-image: -o-linear-gradient(top, #edf5f8, #cde5ef);
+    background-image: linear-gradient(to bottom, #edf5f8, #cde5ef);
+    -webkit-box-shadow: inset 0 1px white, 0 1px 2px rgba(0, 0, 0, 0.15);
+    box-shadow: inset 0 1px white, 0 1px 2px rgba(0, 0, 0, 0.15);
 }
 
 #submitButton:hover {
-    background-color: rgb(22, 111, 22);
+    color: orangered;
 }
