--- a/public/css/loginStyle.css
+++ b/public/css/loginStyle.css
@@ -89,14 +89,14 @@ body {
   
   .login-help {
     margin: 20px 0;
-    font-size: 12px;
-    color: white;
+    font-size: 14px;
+    color: var(--orange-color);
     text-align: center;
     text-shadow: 0 1px #2a85a1;
   }
   
   .login-help a {
-    color: white;
+    color: var(--orange-color);
     text-decoration: none;
   }
   
