--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <img src="images/codepin-logo.jpg" alt="CodePin Logo">
+        <img class="logo" src="images/codepin-logo.jpg" alt="CodePin Logo">
         <ul>
             <li class="button" id="logInButton"><a href="/login"> Login</a></li>
             <li class="button" id="signUpButton"><a href="/signup"> Signup</a></li>
@@ -21,6 +21,14 @@
             <span class="greyText">See it.</span>
             <span class="redText">Pin it.</span>
         </h1>
+        <section class="exampleSection">
+            <img src="images/snippet-example-1.jpg" alt="code snippet example">
+            <img src="images/snippet-example-3.jpg" alt="code snippet example">
+            <img src="images/snippet-example-4.jpg" alt="code snippet example">
+            <img src="images/snippet-example-7.jpg" alt="code snippet example">
+            <img src="images/snippet-example-5.jpg" alt="code snippet example">
+            <img src="images/snippet-example-6.jpg" alt="code snippet example">
+        </section>
     </main>
 </body>
 </html>
