Cleaned up index css

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -11,8 +11,8 @@
     <header>
         <img class="logo" src="images/codepin-logo.jpg" alt="CodePin Logo">
         <ul>
-            <li class="button" id="logInButton"><a href="/login"> Login</a></li>
-            <li class="button" id="signUpButton"><a href="/signup"> Signup</a></li>
+            <a class="button" id="logInButton" href="/login">Login</a>
+            <a class="button" id="signUpButton" href="/signup"> Signup</a>
         </ul>
     </header>
     <main>
