fixed pins languages styling

--- a/views/pins.ejs
+++ b/views/pins.ejs
@@ -42,7 +42,7 @@
             <% const LANGUAGES=['HTML', 'CSS' , 'Python' , 'Java' , 'JavaScript' , 'Swift' , 'C++' , 'C#' , 'R'
                 , 'Golang (Go)' , 'Ruby' ] %>
                 <% for (var i=0; i < LANGUAGES.length; i++) { %>
-                    <option value <%=LANGUAGES[i] %>><%=LANGUAGES[i] %>
+                    <option value = <%=LANGUAGES[i] %>><%=LANGUAGES[i] %>
                     </option>
                     <% } %>
         </select>
