made the snippet div all on one line so formatting stays when displaying

--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -13,22 +13,16 @@
 <body>
   <h1>CodePins</h1>
   <a href="/pins">Go to my pins</a>
+
+
   <div id="snippetsContainer">
     <% snippets.forEach( el=> { %>
       <div class='todoItem' data-id='<%=el._id%>'>
-        <h3>
-          <%= el.title %>
-        </h3>
-        <div class='wrapCode code'>
-          <%= decodeURIComponent(el.snippet) %>
-        </div>
-        <h4>
-          <%= el.language %>
-        </h4>
-        <p>
-          <%= el.description %>
-        </p>
-        
+        <h3><%= el.title %></h3>
+        <!-- this div has to stay formatted on one line or it wont work when showing the snippet -->
+        <div class='wrapCode code'><%= decodeURIComponent(el.snippet) %></div>
+        <h4><%= el.language %></h4>
+        <p><%= el.description %></p> 
       </div>
       <% }) %>
   </div>
