--- a/views/login.ejs
+++ b/views/login.ejs
@@ -5,6 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CodePin - Login</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:ital,wght@0,400;0,600;1,600&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="./css/loginStyle.css">
 </head>
@@ -24,7 +28,8 @@
         <form action="/login" method="POST">
             <p><input type="text" name="email" placeholder="Email Address"></p>
             <p><input type="password" name="password" placeholder="Password"></p>
-            <p class="submit"><input type="submit" name="commit" value="Login"></p>
+            <br>
+            <button class="btn login" type="submit" name="commit" value="Login">Login</button>
         </form>
     </div>
     
