--- a/public/css/index.css
+++ b/public/css/index.css
@@ -1,82 +1,120 @@
-
-html{
-    background-color: #eaf6f6;
+/* Base Styling Sheet */
+:root {
+    --background: #E9F6F5;
+    --red-text: #f1684e;
+    --blue-text: #85c8dd;
+    --black-text: #000000;
+    --grey-text: #d3e0e2;
+    --white-text: #ffffff;
 }
 
+body {
+    font-family: 'Source Sans Pro', sans-serif;
+    font-size: 62.5px;
+    padding: 1% 3%;
+}
+
+html{
+    background-color: var(--background);
+}
+
+
 /* Header */
+header {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
 .logo{
     max-height: 100px;
     margin: 0;
 }
 
 ul{
+    display: flex;
     float: right;
-    margin-top: 0;
+    margin: 0 5%;
 }
 
-.button{
-  background: #FF4742;
-  border: 1px solid #FF4742;
-  border-radius: 6px;
-  box-shadow: rgba(0, 0, 0, 0.1) 1px 2px 4px;
+li.header {
+    list-style: none;
+    margin: 5%;
+}
+
+.btn {
   box-sizing: border-box;
-  color: #FFFFFF;
+box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    border-radius: 10px;
+    color: var(--white-text);
   cursor: pointer;
   display: inline-block;
-  font-family: nunito,roboto,proxima-nova,"proxima nova",sans-serif;
-  font-size: 16px;
+font-size: 1.3rem;
   font-weight: 800;
-  line-height: 16px;
+line-height: 16px;
   min-height: 40px;
   outline: 0;
   padding: 12px 14px;
   text-align: center;
   text-rendering: geometricprecision;
-  text-transform: none;
+/* text-transform: none; */
   user-select: none;
   -webkit-user-select: none;
   touch-action: manipulation;
   vertical-align: middle;
 }
 
-.button:hover,
-.button:active {
-  background-color: initial;
-  background-position: 0 0;
-  color: #FF4742;
+.btn.red,
+.btn.blue {
+    width: 150px;
 }
 
-.button:active {
+.btn.red {
+    background: var(--red-text);
+    border: 1px solid var(--red-text);
+}
+
+.btn.blue {
+    background: var(--blue-text);
+    border: 1px solid var(--blue-text);
+}
+
+button:hover,
+button:active {
+  background-color: initial;
+  background-position: 0 0;
+color: var(--red-text);
+}
+
+button:active {
   opacity: .5;
 }
 
-a{
+a {
     text-decoration: none;
-    color: #FFFFFF;
+    color: var(--white-text);
 }
 
 /* Main */
-
-h1{
-    display: flex;
-    justify-content: center;
-    margin-top: 10%;
+h1.main-slogan {
+    text-align: center;
+    font-size: 3rem;
 }
 
-h1 span{
+span.slogan {
     padding: 1%;
+    text-align: center;
 }
 
-.blueText{
-    color: #85c8dd;
+.blueText {
+    color: var(--blue-text);
 }
 
-.greyText{
-    color: #d3e0e2;
+.greyText {
+    color: var(--grey-text);
 }
 
-.redText{
-    color: #f1684e;
+.redText {
+    color: var(--red-text);
 }
 
 .exampleSection{
@@ -94,7 +132,6 @@ h1 span{
 
 
 /* Media Queries */
-
 @media only screen and (max-width: 616px){
     .exampleSection img{
         width: 45%;
@@ -102,6 +139,14 @@ h1 span{
 }
 
 @media only screen and (max-width: 416px){
+    ul {
+            flex-direction: column;
+        }
+    
+        li.header {
+            margin: 1%;
+            height: 50px;
+        }
     .exampleSection img{
         width: 90%;
     }
