--- a/public/css/loginStyle.css
+++ b/public/css/loginStyle.css
@@ -113,7 +113,7 @@ div.login {
     box-shadow: 0 0 200px rgba(255, 255, 255, 0.5), 0 1px 2px rgba(0, 0, 0, 0.3);
   }
   
-  .login:before {
+div.login:before {
     content: '';
     position: absolute;
     top: -8px;
@@ -125,7 +125,7 @@ div.login {
     border-radius: 4px;
   }
   
-        h1.login {
+h1.login {
     margin: -20px -20px 21px;
     line-height: 40px;
     font-size: 1.5rem;
@@ -135,19 +135,17 @@ div.login {
       border-bottom: 1px solid var(--dark-grey);
         border-radius: 15px 15px 0 0;
   }
-  
-  .login p {
-    margin: 20px 0 0;
-  }
-  
-  .login p:first-child {
-    margin-top: 0;
+
+        form.login {
+          text-align: center;
   }
   
   .login input[type=text], .login input[type=password] {
-    width: 278px;
+    width: 80%;
+      margin: auto;
   }
   
+/* TODO   */
   .login p.remember_me {
     float: left;
     line-height: 31px;
@@ -166,15 +164,15 @@ div.login {
     vertical-align: middle;
   }
   
-        button.login,
-        button.signUp {
+                button.btn.login,
+                button.btn.signUp {
           text-align: center;
-          font-size: 14px;
+          font-size: 1rem;
   }
   
   .login-help {
     margin: 20px 0;
-    font-size: 14px;
+    font-size: 1rem;
     color: var(--orange-color);
     text-align: center;
     text-shadow: 0 1px #2a85a1;
@@ -197,11 +195,6 @@ div.login {
   ::-webkit-input-placeholder {
     color: #ccc;
     font-size: 13px;
-  }
-  
-  input {
-    font-family: 'Lucida Grande', Tahoma, Verdana, sans-serif;
-    font-size: 14px;
   }
   
   input[type=text], input[type=password] {
