--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -12,20 +12,30 @@
     <link rel="stylesheet" href="./css/loginStyle.css">
 </head>
 <body>
+    <header>
+        <img class="logo" src="images/codepin-logo.jpg" alt="CodePin Logo">
+        <ul>
+            <li class="header" id="logInButton"><a class="btn blue login header" href="/login" role="button">Login</a></li>
+            <li class="header" id="signUpButton"><a class="btn red signup header" href="/" role="button">Home</a>
+            </li>
+        </ul>
+    </header>
+    <main>
     <% if (locals.messages.errors) { %>
         <% messages.errors.forEach( el => { %>
             <div class="alert alert-danger"><%= el.msg %></div>
         <% }) %>    
     <% } %>
     <div class="login">
-        <form action="/signup" method="POST">
-            <p><input type="text" name="userName" placeholder="User Name"></p>
-            <p><input type="text" name="email" placeholder="Email Address"></p>
-            <p><input type="password" name="password" placeholder="Password"></p>
-            <p><input type="password" name="confirmPassword" placeholder="Confirm Password"></p>
-            <br>
+        <h1 class="login">Sign up for CodePin</h1>
+        <form class="login" action="/signup" method="POST">
+            <input type="text" name="userName" placeholder="User Name" required>
+            <input type="text" name="email" placeholder="Email Address" required>
+            <input type="password" name="password" placeholder="Password" required>
+            <input type="password" name="confirmPassword" placeholder="Confirm Password" required>
             <button class="btn signUp" type="submit" name="commit" value="Create User">Sign Up</button>
         </form>
     </div>
+    </main>
 </body>
 </html>
