--- a/views/pins.ejs
+++ b/views/pins.ejs
@@ -10,7 +10,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:ital,wght@0,400;0,600;1,600&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" href="css/pins.style.css">
+    <link rel="stylesheet" href="css/pinsStyle.css">
 </head>
 
 <body>
@@ -27,12 +27,20 @@
         <div class="main-container">
             <div class="snippet out" id="snippetsContainer">
         <% snippets.forEach( el=> { %>
-            <div class='todoItem' data-id='<%=el._id%>'>
-                <h3><%= el.title %></h3>
-                <div class='wrapCode code'><%= decodeURIComponent(el.snippet) %></div>
-                <h4><%= el.language %></h4>
-                <p><%= el.description %></p>
-                <button class='del'> Delete </button>
+            <div class='snippet in userDash' data-id='<%=el._id%>'>
+                <h3 class="snippet">
+                    <%= el.title %>
+                </h3>
+                <div class="wrapCode code">
+                    <%= decodeURIComponent(el.snippet) %>
+                </div>
+                <h4 class="snippet">
+                    <%= el.language %>
+                </h4>
+                <p class="snippet">
+                    <%= el.description %>
+                </p>
+                <button class="btn del">Delete</button>
             </div>
             <% }) %>
     </div>
