Updated logo and removed delete button from dashboard view

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -14,7 +14,7 @@
 </head>
 <body>
     <header>
-        <img class="logo" src="images/codepin-logo.jpg" alt="CodePin Logo">
+        <img class="logo" src="images/codepin-logo-transparent.png" alt="CodePin Logo">
         <ul>
             <a class="button" id="logInButton" href="/login">Login</a>
             <a class="button" id="signUpButton" href="/signup"> Signup</a>
