--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -15,7 +15,7 @@
 
 <body>
   <header>
-    <img class="logo" src="images/codepin-logo.jpg" alt="CodePin Logo">
+    <img class="logo" src="/images/codepin-logo-transparent.png" alt="CodePin Logo">
     <ul>
       <li class="header" id="logoutButton"><a class="btn red logout" href="/logout" role="button">Logout</a></li>
       <li class="header" id="toPrivateBtn"><a href="/pins" class="btn blue pin-user" role="button">Go to
@@ -41,7 +41,6 @@
         <p class="snippet">
           <%= el.description %>
         </p>
-        <button class="btn del">Delete</button>
       </div>
       <% }) %>
   </div>
