--- a/views/pins.ejs
+++ b/views/pins.ejs
@@ -15,7 +15,7 @@
 
 <body>
     <header>
-        <img class="logo" src="images/codepin-logo.jpg" alt="CodePin Logo">
+        <img class="logo" src="/images/codepin-logo-transparent.png" alt="CodePin Logo">
         <ul>
             <li class="header" id="logoutButton"><a class="btn red logout" href="/logout" role="button">Logout</a></li>
             <li class="header" id="toPublicBtn"><a href="/pins/dashboard" class="btn blue pin-dash" role="button">Go to
@@ -26,7 +26,7 @@
         <h1 class="pin-dashboard">Pin It.</h1>
         <div class="main-container">
             <div class="snippet out" id="snippetsContainer">
-        <% snippets.forEach( el=> { %>
+                <% snippets.forEach( el=> { %>
             <div class='snippet in userDash' data-id='<%=el._id%>'>
                 <h3 class="snippet">
                     <%= el.title %>
