changed div holding code example to keep formatting

--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -32,9 +32,9 @@
         <h3 class="snippet">
           <%= el.title %>
         </h3>
-        <div class="wrapCode code">
-          <%= decodeURIComponent(el.snippet) %>
-        </div>
+        <!-- leave this line on single line to keep formatting -->
+        <div class="wrapCode code"><%=decodeURIComponent(el.snippet)%></div>
+        <!------------------------------------------------------->
         <h4 class="snippet">
           <%= el.language %>
         </h4>
